<resources>
    <string name="app_name">MediDeck</string>
    <string name="intro">Hello there,
        Welcome back!</string>
    <string name="Doc_intro">Hello Doctor,
        Welcome back!</string>
    <string name="Search">Search Bar</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="number">Number</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="address">Address</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="get_on_boar">Get on Board!</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm
    Password</string>
    <string name="covid_19_ca">Covid-19 care  hospitals  and
        isolation centres</string>
    <string name="laboratorie">Laboratories  with Covid-19
        testing facility</string>
    <string name="what_do_you">What do you need?</string>
    <string name="timeline">Time Line</string>

</resources>