<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/up_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile"
    android:background="#222831">

    <LinearLayout
        android:id="@+id/up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="275dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/profile_pic" />

        <TextView
            android:id="@+id/name_up"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal|left"
            android:text="@string/name"
            android:textAppearance="@style/name" />

        <EditText
            android:id="@+id/name_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:background="@drawable/input_profile_draw"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/number_up"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|left"
            android:text="@string/number"
            android:textAppearance="@style/name" />

        <EditText
            android:id="@+id/number_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:background="@drawable/input_profile_draw"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/age_up"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|left"
            android:text="@string/age"
            android:textAppearance="@style/name" />

        <EditText
            android:id="@+id/age_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:background="@drawable/input_profile_draw"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/address_up"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|left"
            android:text="@string/address"
            android:textAppearance="@style/name" />

        <EditText
            android:id="@+id/address_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:background="@drawable/input_profile_draw"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/bloodgroup_up"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|left"
            android:text="@string/bloodgroup"
            android:textAppearance="@style/name" />

        <EditText
            android:id="@+id/bloodgroup_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:background="@drawable/input_profile_draw"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/weight_up"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|left"
            android:text="@string/weight"
            android:textAppearance="@style/name" />

        <EditText
            android:id="@+id/weight_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:background="@drawable/input_profile_draw"
            android:elevation="16dp" />

        <TextView
            android:id="@+id/height_up"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|left"
            android:text="@string/height"
            android:textAppearance="@style/name" />

        <EditText
            android:id="@+id/height_up_edittext"
            android:layout_width="259dp"
            android:layout_height="60dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:background="@drawable/input_profile_draw"
            android:elevation="16dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="Save"
            android:background="@drawable/button_round"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>